--- a/config.toml
+++ b/config.toml
@@ -17,7 +17,7 @@
     hl_inline = false
     lineAnchors = ''
     lineNoStart = 1
-    lineNos = false
+    lineNos = true
     lineNumbersInTable = true
     noClasses = true
     noHl = false
